[tool.poetry]
name = "resuelve-wordle"
version = "0.1.0"
description = "Soluciona los puzzles Wordle de Danielfrg."
authors = ["n0nuser <pjgr2000@gmail.com>"]
license = "GPL-3.0-or-later"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
flake8 = "^4.0.1"
black = {version = "^22.6.0", allow-prereleases = true}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
